Add test for CoreModel

--- a/webdocs/test/core-testrunner.css
+++ b/webdocs/test/core-testrunner.css
@@ -21,3 +21,8 @@
 	border-radius: 5px;
 	padding: 2px;
 }
+
+#mocha .test.pass.fast .duration {
+	background-color: green;
+	display: inline-block;
+}
