Add max length to List

--- a/xqcore.css
+++ b/xqcore.css
@@ -1,8 +1,30 @@
-input[type=text],
-input[type=password] {
-  border: 1px solid #ccc;
+/**
+ * Styles input fields
+ * @property .xq-input
+ */
+.xq-input {
+  border: 2px solid #ddd;
+  border-radius: 3px;
+  font-size: 13px;
+  padding: 5px 2px;
+  background-color: #fefefe;
 }
-input[type=text].xq-invalid,
-input[type=password].xq-invalid {
+.xq-input.xq-invalid {
   border-color: #d00;
+}
+.xq-input:focus {
+  border-color: #bbb;
+}
+/**
+ * Forms
+ */
+.xq-forms dl {
+  margin-top: 5px;
+}
+.xq-forms dt {
+  font-size: 11px;
+  color: #777;
+}
+.xq-forms dd {
+  margin-left: 0;
 }
