--- a/tools/dev/public/css/main.css
+++ b/tools/dev/public/css/main.css
@@ -47,9 +47,15 @@
   text-transform: capitalize;
 }
 
-.cmpSandbox {
+.cmpSandbox,
+.cmpCodebox {
   background-color: #eee;
   padding: 10px;
   border-radius: 5px;
   color: #333;
+  margin-top: 20px;
+}
+
+.cmpCodebox {
+  color: #00397e;
 }
