--- a/tools/dev/public/css/xqcore.css
+++ b/tools/dev/public/css/xqcore.css
@@ -1,3 +1,11 @@
+@keyframes xq-anim-fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 /**
  * Styles input fields
  * @property .xq-input
@@ -27,4 +35,13 @@
 }
 .xq-forms dd {
   margin-left: 0;
+}
+.xq-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.xq-list .item {
+  list-style: none;
+  animation: 1s xq-anim-fadein;
 }
