Input component validation

--- a/less/forms.less
+++ b/less/forms.less
@@ -8,6 +8,8 @@
     font-size: 13px;
     padding: 5px 2px;
     background-color: #fefefe;
+    display: inline-block;
+    position: relative;
 
     &:focus {
         border-color: #bbb;
