--- a/less/main.less
+++ b/less/main.less
@@ -1,3 +1,6 @@
 @import "animations.less";
+@import "colors.less";
+@import "core.less";
 @import "forms.less";
 @import "list.less";
+@import "tooltip.less";
