--- a/xqcore.css
+++ b/xqcore.css
@@ -6,6 +6,9 @@
     opacity: 1;
   }
 }
+.xq-inactive {
+  display: none;
+}
 /**
  * Styles input fields
  * @property .xq-input
@@ -74,4 +77,28 @@
 .xq-list .item {
   list-style: none;
   animation: 1s xq-anim-popin;
+}
+.xq-tooltip {
+  background-color: rgba(0, 87, 193, 0.8);
+  color: #ffffff;
+  padding: 2px 5px;
+  text-align: center;
+  border-radius: 5px;
+  position: absolute;
+  box-shadow: 1px 2px 5px 1px rgba(0, 0, 0, 0.3);
+}
+.xq-tooltip::after {
+  content: '';
+  width: 0;
+  height: 0;
+  display: block;
+  border: 8px solid rgba(0, 87, 193, 0.8);
+  border-left-color: transparent;
+  border-right-color: transparent;
+  border-bottom: 0;
+  position: absolute;
+  bottom: -8px;
+  left: 50%;
+  margin-left: -8px;
+  opacity: .8;
 }
