--- a/tools/dev/public/css/xqcore.css
+++ b/tools/dev/public/css/xqcore.css
@@ -1,77 +1,133 @@
-@keyframes xq-anim-popin {
+body {
+  margin: 0;
+  font-size: 13px;
+  font-family: sans-serif;
+}
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+ul li {
+  list-style: none;
+}
+@-moz-keyframes ll-anim-popin {
   from {
+    display: none;
     opacity: 0;
+  }
+  1% {
+    display: block;
   }
   to {
     opacity: 1;
   }
 }
-/**
- * Styles input fields
- * @property .xq-input
- */
-.xq-input {
-  border: 2px solid #ddd;
-  border-radius: 3px;
+@-webkit-keyframes ll-anim-popin {
+  from {
+    display: none;
+    opacity: 0;
+  }
+  1% {
+    display: block;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@-o-keyframes ll-anim-popin {
+  from {
+    display: none;
+    opacity: 0;
+  }
+  1% {
+    display: block;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes ll-anim-popin {
+  from {
+    display: none;
+    opacity: 0;
+  }
+  1% {
+    display: block;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@-moz-keyframes ll-anim-popout {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+@-webkit-keyframes ll-anim-popout {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+@-o-keyframes ll-anim-popout {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+@keyframes ll-anim-popout {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+@font-face {
+  font-family: 'octicons';
+  src: url("fonts/octicons.eot?#iefix") format('embedded-opentype'), url("fonts/octicons.woff") format('woff'), url("fonts/octicons.ttf") format('truetype'), url("fonts/octicons.svg#octicons") format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+.xq-inactive {
+  animation: ll-anim-popout forwards 1s;
+}
+.xq-tooltip {
+  border-radius: 5px;
+  padding: 2px 5px;
   font-size: 14px;
-  padding: 5px 2px;
-  background-color: #fefefe;
-  display: inline-block;
-  position: relative;
-}
-.xq-input:focus {
-  border-color: #bbb;
-}
-.xq-input.xq-invalid {
-  border-color: #d00;
-}
-.xq-input .xq-input-field {
-  border: 0;
-  padding: 0;
-}
-.xq-input .xq-error-label {
-  position: absolute;
-  right: 5px;
-  bottom: -25px;
-  background-color: rgba(0, 0, 0, 0.8);
   color: #fff;
-  padding: 5px 2px;
-  display: none;
-  text-align: center;
+  position: absolute;
+  background-color: #1665e5;
+  animation: ll-anim-popin 1s;
 }
-.xq-input .xq-error-label::before {
-  content: '⏶';
-  color: rgba(0, 0, 0, 0.8);
-  font-size: 12px;
-  line-height: 12px;
-  margin: auto auto;
-  display: inline-block;
-  width: 8px;
-  height: 8px;
+.xq-tooltip::after {
+  content: '';
+  width: 0;
+  height: 0;
+  position: absolute;
+  bottom: -8px;
+  left: 50%;
+  margin-left: -8px;
+  border: 8px solid transparent;
+  border-top-color: #1665e5;
+  border-bottom: 0;
 }
-.xq-input.xq-invalid .xq-error-label {
-  display: block;
-  animation: 1s xq-anim-popin;
+.xq-tooltip.type-warn {
+  background-color: #f1be2d;
+  color: #000;
 }
-/**
- * Forms
- */
-.xq-forms dl {
-  margin-top: 5px;
+.xq-tooltip.type-error {
+  background-color: #972d36;
 }
-.xq-forms dt {
-  font-size: 11px;
-  color: #777;
-}
-.xq-forms dd {
-  margin-left: 0;
-}
-.xq-list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-.xq-list .item {
-  list-style: none;
-  animation: 1s xq-anim-popin;
+.xq-tooltip.xq-inactive {
+  animation: ll-anim-popout forwards 1s;
 }
