--- a/tools/dev/public/css/xqcore.css
+++ b/tools/dev/public/css/xqcore.css
@@ -131,3 +131,22 @@ ul li {
 .xq-tooltip.xq-inactive {
   animation: ll-anim-popout forwards 1s;
 }
+.xq-progress-bar {
+  width: 100px;
+  height: 30px;
+  position: relative;
+  padding: 2px;
+  border-radius: 5px;
+  display: inline-block;
+}
+.xq-progress-bar.vertical {
+  width: 30px;
+  height: 100px;
+}
+.xq-progress-bar .bar {
+  background-color: #1665e5;
+  border-radius: 5px;
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+}
