--- a/tools/dev/public/css/xqcore.css
+++ b/tools/dev/public/css/xqcore.css
@@ -100,6 +100,40 @@ ul li {
 .xq-inactive {
   animation: ll-anim-popout forwards 1s;
 }
+.xq-counter {
+  color: #aaaab0;
+  font-size: 16px;
+  font-weight: bold;
+  font-family: monospace;
+  padding: 3px 5px;
+  border: 2px solid #aaaab0;
+  border-radius: 9px;
+}
+.xq-grid .item {
+  display: inline-block;
+  min-width: 100px;
+  min-height: 80px;
+  text-align: center;
+}
+.xq-progress-bar {
+  width: 100px;
+  height: 30px;
+  position: relative;
+  padding: 2px;
+  border-radius: 5px;
+  display: inline-block;
+}
+.xq-progress-bar.vertical {
+  width: 30px;
+  height: 100px;
+}
+.xq-progress-bar .bar {
+  background-color: #1665e5;
+  border-radius: 5px;
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+}
 .xq-tooltip {
   border-radius: 5px;
   padding: 2px 5px;
@@ -130,23 +164,4 @@ ul li {
 }
 .xq-tooltip.xq-inactive {
   animation: ll-anim-popout forwards 1s;
-}
-.xq-progress-bar {
-  width: 100px;
-  height: 30px;
-  position: relative;
-  padding: 2px;
-  border-radius: 5px;
-  display: inline-block;
-}
-.xq-progress-bar.vertical {
-  width: 30px;
-  height: 100px;
-}
-.xq-progress-bar .bar {
-  background-color: #1665e5;
-  border-radius: 5px;
-  display: inline-block;
-  width: 100%;
-  height: 100%;
 }
