--- a/xqcore.css
+++ b/xqcore.css
@@ -134,6 +134,9 @@ ul li {
   width: 100%;
   height: 100%;
 }
+.xq-table {
+  background-color: #ddd;
+}
 .xq-tooltip {
   border-radius: 5px;
   padding: 2px 5px;
