--- a/tools/dev/public/css/main.css
+++ b/tools/dev/public/css/main.css
@@ -117,3 +117,21 @@ button:focus {
   line-height: 80px;
   color: #00397e;
 }
+
+
+.counter,
+.connections {
+  background-color: rgb(0, 55, 161);
+  color: #fff;
+  font-size: 23px;
+  display: inline-block;
+  width: 60px;
+  padding: 10px;
+  border-radius: 5px;
+  margin-right: 20px;
+  text-align: center;
+}
+
+.connections {
+  background-color: #090d7c;
+}
