--- a/tools/dev/public/css/main.css
+++ b/tools/dev/public/css/main.css
@@ -134,4 +134,15 @@ button:focus {
 
 .connections {
   background-color: #090d7c;
+  float: right;
+}
+
+.add-value {
+  margin-top: 30px;
+}
+
+.list li {
+  color: #333;
+  font-size: 16px;
+  padding: 2px 5px;
 }
