--- a/tools/dev/public/css/main.css
+++ b/tools/dev/public/css/main.css
@@ -119,17 +119,23 @@ button:focus {
 }
 
 
-.counter,
+.counter {
+  display: inline-block;
+}
+
+span.xq-counter,
 .connections {
   background-color: rgb(0, 55, 161);
   color: #fff;
   font-size: 23px;
+  font-weight: normal;
   display: inline-block;
   width: 60px;
   padding: 10px;
   border-radius: 5px;
   margin-right: 20px;
   text-align: center;
+  border: none;
 }
 
 .connections {
